<?xml version="1.0"?>
<package>
  <name>cbm_pop_mdvrp</name>
  <version>0.0.0</version>
  <description>The cbm_pop_mdvrp package</description>

  <maintainer email="barbara.arbanas@fer.hr">barbara</maintainer>
  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/cbm-mdvrp</url> -->

  <build_depend>message_generation</build_depend> 
  <build_depend>python-numpy</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>python-numpy</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
